kubernetes/motion-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: motion
  name: motion
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: motion
  sessionAffinity: None
  type: ClusterIP
