kubernetes/motion-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: motion
  name: motion
spec:
  rules:
  - host: motion.mydomain.com
    http:
      paths:
      - backend:
          serviceName: motion
          servicePort: 8081
